2001-07-04  Tom Tromey  <tromey@redhat.com>

	Modified from patch by Julian Hall <jules@acris.co.uk>:
	* jartool.c (errno): Conditionally declare.
	(O_BINARY): Conditionally define.
	(main): Use open, not creat.  Use O_BINARY everywhere.
	(make_manifest): Use O_BINARY.
	(add_to_jar): Likewise.

2001-06-28  Tom Tromey  <tromey@redhat.com>

	* configure: Rebuilt.
	* configure.in: Accept --with-system-zlib.  Fixes PR java/3441.

2001-05-15  Per Bothner  <per@bothner.com>

        * Makefile.am (bin_PROGRAMS):  Renamed from "fastjar" to "jar".

2001-05-03  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* jartool.c (jt_strdup): New function.
	(get_next_arg): Use jt_strdup instead of strdup.

2001-01-21  Tom Tromey  <tromey@redhat.com>

	* Makefile.in: Rebuilt.
	* Makefile.am (bin_PROGRAMS): Remove grepjar.
	(EXTRA_PROGRAMS): New macro.

2000-12-28  Robert Lipe <robertl@sco.com>

	* jartool.c (MAXPATHLEN): Provide if not defined.

2000-12-15  Tom Tromey  <tromey@redhat.com>
            Kelley Cook <kelleycook@home.com>

	* jargrep.c: Include getopt.h if it exists.
	(optind): Declare.
	* configure, config.h: Rebuilt.
	* configure.in: Check for getopt.h.

2000-12-14  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* configure.in (fastjar_warn_cflags): Set when using gcc.

	* Makefile.am (AM_CFLAGS): Set to @fastjar_warn_cflags@.

2000-12-14  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* compress.c: Include stdlib.h and compress.h.
	(rcsid): Delete.
	(report_str_error): Make static.
	(ez_inflate_str): Delete unused variable.  Add parens in if-stmt.
	(hrd_inflate_str): Likewise.

	* compress.h (init_compression, end_compression, init_inflation,
	end_inflation): Prototype void arguments.

	* dostime.c (rcsid): Delete.

	* jargrep.c: Include ctype.h, stdlib.h, zlib.h and compress.h.
	Make functions static.  Cast ctype function argument to `unsigned
	char'.  Add parens in if-stmts.  Constify.
	(Usage): Change into a macro.
	(jargrep): Remove unused parameter.
